Added search bar

--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -7,13 +7,17 @@
     <body>
         <div class="ui secondary pointing menu navigation">
             <img src="/images/logo.png" class="logo ui avatar image"></img>
+            <div class="search ui transparent icon input">
+                <input type="text" class="stxt" placeholder="search repostiory">
+                <i class="sbtn link icon"></i>
+            </div>
             <div class="right menu">
                 {{ if eq .loggedin "true" }} 
-                <img src="{{ .avatar }}" class="picture ui avatar image"></img>
-                <a class="active item account" href="">{{ .username }}</a>
-                <a class="item" href="/logout">Logout</a>
+                    <img src="{{ .avatar }}" class="picture ui avatar image"></img>
+                    <a class="active item account" href="">{{ .username }}</a>
+                    <a class="item" href="/logout">Logout</a>
                 {{ else }}
-                <a class="item account" href="/login">Login</a>
+                    <a class="item account" href="/login">Login</a>
                 {{ end }}
             </div>
         </div>
