--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -3,13 +3,14 @@
         <title>SemQuery</title>
         <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/semantic-ui/2.1.3/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <script src="/js/script.js"></script>
     </head>
     <body>
         <div class="ui secondary pointing menu navigation">
             <img src="/images/logo.png" class="logo ui avatar image"></img>
             <div class="search ui transparent icon input">
                 <input type="text" class="stxt" placeholder="search repostiory">
-                <i class="sbtn link icon"></i>
+                <i class="sbtn search link icon"></i>
             </div>
             <div class="right menu">
                 {{ if eq .loggedin "true" }} 
