--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -22,6 +22,30 @@
                 {{ end }}
             </div>
         </div>
-        {{ yield }}
+        <!-- Currently searching <repo name> -->
+        <div class="ui icon message transparent">
+          <i class="find icon"></i>
+          <div class="content">
+            <div class="header">
+              {{ //come thru w that repo name }}
+            </div>
+            <p>Currently Searching</p>
+          </div>
+        </div>
+        <!-- Search box (larger than life) -->
+            <div class="ui massive left icon input sbox message">
+              <input type="text" placeholder="Search...">
+              <i class="search icon"></i>
+            </div>
+        <!-- Search results -->
+        <div class="ui segment floop">
+          <p>hey here's some shit you searched for</p>
+        </div>
+        <div class="ui segment floop">
+          <p>hey here's some more</p>
+        </div>
+        <div class="ui segment floop">
+          <p>even more!!!1! just for u</p>
+        </div>
     </body>
 </html>
