--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,3 +15,19 @@
 .account {
     left: 5px;
 }
+
+.floop {
+	text-align: center;
+	margin-left: 20%; 
+	margin-right: 20%
+}
+
+body {
+	margin-left: .5%;
+	margin-right: .5%;
+}
+
+.sbox {
+	width: 100%;
+	text-align: center;
+}
