--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -21,6 +21,7 @@
                     <a class="item account" href="/login">Login</a>
                 {{ end }}
             </div>
+            {{ yield }}
         </div>
     </body>
 </html>
