--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,15 +1,28 @@
 <div class="ui one column centered grid">
     <div class="valigned">
-        <img src="/images/semquery_logo_nofill_white.png" class="llogo"></img>
+        <img src="/images/semquery_logo_shadow.png" class="llogo"></img>
         <br>
-        <div class="main-search ui massive icon input">       
-            <input class="stxt" type="text" placeholder="Search 15,384 files" />
-            <i class="sbtn search icon" style="margin-right: 10px"></i>
-        </div>
+        <form action="/query" method="POST">
+            <div class="main-search ui massive icon input">       
+                <input class="stxt" type="text" placeholder="Search 15,384 files" name="q" />
+                <i class="sbtn search icon" style="margin-right: 10px"></i>
+            </div>
+            <div id="collapse-search" style="display: none">
+                <div class="ui search">
+                    <div class="ui icon input">
+                        <input class="prompt" type="text" placeholder="Enter repository..." name="repo" />
+                        <i class="github icon"></i>
+                    </div>
+                    
+                    <div class="results"></div>
+                </div>
+            </div>
+            <input type="submit" style="display:none"/>
+        </form>
         <br>
         <br>
         Try these:
-        <ul class="ui list">
+        <ul class="ui list" style="text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6)">
             <li><code>definition(name: "test")</code></li>
             <li><code>local_var(type: "byte[]")</code></li>
             <li><code>then { empty }</code></li>
