--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -4,19 +4,23 @@
         <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/semantic-ui/2.1.3/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <script src="/js/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </head>
     <body>
         <div class="ui secondary pointing menu navigation">
-            <img src="/images/logo.png" class="logo ui avatar image"></img>
-            <div class="right menu">
-                {{ if eq .loggedin "true" }} 
-                    <img src="{{ .avatar }}" class="picture ui avatar image"></img>
-                    <a class="active item account" href="">{{ .username }}</a>
-                    <a class="item" href="/logout">Logout</a>
-                {{ else }}
-                    <a class="item account" href="/login">Login</a>
-                {{ end }}
+            <div class="ui container">
+                <img src="/images/logo.png" class="logo ui avatar image"></img>
+                <div class="right menu">
+                    {{ if eq .loggedin "true" }} 
+                        <img src="{{ .avatar }}" class="picture ui avatar image"></img>
+                        <a class="active item account" href="">{{ .username }}</a>
+                        <a class="item" href="/logout">Logout</a>
+                    {{ else }}
+                        <a class="item account" href="/login">Login</a>
+                    {{ end }}
+                </div>
             </div>
+            
         </div>
         {{ yield }}
     </body>
