Added logo link

--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -9,7 +9,7 @@
     <body>
         <div class="ui secondary pointing menu navigation">
             <div class="ui container">
-                <img src="/images/logo.png" class="logo ui avatar image"></img>
+                <a href="/"><img src="/images/logo.png" class="logo ui avatar image"></img></a>
                 <div class="right menu">
                     {{ if eq .loggedin "true" }} 
                         <img src="{{ .avatar }}" class="picture ui avatar image"></img>
