Added progres bar and client/server upload sync

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -4,13 +4,13 @@
         <br>
         <form action="/query" method="POST">
             <div class="main-search ui massive icon input">       
-                <input class="stxt" type="text" placeholder="Search 15,384 files" name="q" />
+                <input class="stxt" type="text" placeholder="Search 15,384 files" name="q" autocomplete="off" />
                 <i class="sbtn search icon" style="margin-right: 10px"></i>
             </div>
             <div id="collapse-search" style="display: none">
                 <div class="ui search">
                     <div class="ui icon input">
-                        <input class="prompt" type="text" placeholder="Enter repository..." name="repo" />
+                        <input class="prompt" type="text" placeholder="Enter repository..." name="repo" autocomplete="off" />
                         <i class="github icon"></i>
                     </div>
                     
