--- a/templates/query.tmpl
+++ b/templates/query.tmpl
@@ -1,15 +1,17 @@
+<script>
+    var WS_ID = "{{ .ws_id }}";
+</script>
 <script src="/js/update.js"></script>
 <div class="query-container ui container" style="margin-left: 10%; margin-right: 10%">
     <div class="ui one column centered grid">
         <div class="column">
             <div align="center">
-                <h1 class="query-results">Query Results</h1>
-                <p class="counter"></p>
+                <p id="query-results"></p>
                 <br>
                 
             </div>
             <div style="margin: 0 15%">
-                <div class="ui active progress">
+                <div id="progress-bar" class="ui active progress">
                     <div id="bar" class="bar" style="width: 0%;">
                         <div id="progress-label" class="progress">0%</div>
                     </div>
