--- a/public/css/main.css
+++ b/public/css/main.css
@@ -79,7 +79,6 @@ code {
     margin-top: 40px;
     margin-right: 10% !important;
     margin-left: 10% !important;
-    height: 100%;
     background-color: white;
 }
 
@@ -107,6 +106,11 @@ code {
     border: 1px solid #ddd; 
 }
 
+#search-results {
+    width: 75%;
+    margin: 0 auto;
+}
+
 th, td {
     padding: 1px;
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
@@ -124,3 +128,19 @@ table td + td {
 .inline {
     color: #333;
 }
+
+pre {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.objective {
+    font-size: 2.5em;
+}
+
+.objective code {
+    font-size: 0.8em;
+    background-color: #eee;
+    border-radius: 3px;
+}
+
