--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -18,9 +18,9 @@
         <br>
         Examples:
         <ul class="ui list" style="text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6)">
-            <li><code>definition(name: "test")</code></li>
+            <li><code>field(name: "test")</code></li>
             <li><code>local_var(type: "byte[]")</code></li>
-            <li><code>then { empty }</code></li>
+            <li><code>class(implements: "Runnable")</code></li>
         </ul>
     </div>
 
